# object-serialization

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md
include/: Person.hpp  binary_serialization.hpp  xml_serialization.hpp
src/: bin_test.cpp  binary_serialization.hpp  binary_smart_ptr_test.cpp  main.cpp  main_test.cpp  test.hpp  tinyxml2.cpp  xml_test.cpp
src/include/: binary_serialization.hpp  xml_serialization.hpp
